name:                tree-utils
version:             0.1.0.0
synopsis:            Misc. utility functions for Data.Tree.
description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagit@galois.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Tree.AntiUnification 
                     , Data.Tree.ATerm
                     , Data.Tree.Labels
                     , Data.Tree.Types
                     , Data.Tree.Yang
  -- other-modules:       
  build-depends:       base >= 3 && < 5
                     , containers
                     , array
                     , mtl
                     , aterm <= 0.1.0.1
